--- a/app/src/main/res/layout-w900dp/item_list.xml
+++ b/app/src/main/res/layout-w900dp/item_list.xml
@@ -10,7 +10,7 @@
     android:divider="?android:attr/dividerHorizontal"
     android:orientation="horizontal"
     android:showDividers="middle"
-    tools:context=".ItemListActivity">
+    tools:context=".MainContainerActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/item_list"
@@ -20,7 +20,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         app:layoutManager="LinearLayoutManager"
-        tools:context="com.anzid.heritage.ItemListActivity"
+        tools:context="com.anzid.heritage.MainContainerActivity"
         tools:listitem="@layout/item_list_content" />
 
     <FrameLayout
