--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,25 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+
+    <color name="colorBackgroundDark">#FF26292D</color>
+    <color name="colorBackgroundLight">#FFFFFFFF</color>
+
+    <color name="colorTextLight">#808080</color>
+    <color name="colorTextDark">#FFFFFFFF</color>
+
+
+    <color name="colorWhite">#FFFFFF</color>
+
+
+    <color name="colorSwitchColor">#FF2371FA</color>
+
+
+    <color name="switchTrack">#ffd600</color>
+    <color name="switchTrackDisable">#90caf9</color>
+    <color name="switchTrackActive">#1565c0</color>
+    <color name="switchTrackNormal">#90caf9</color>
+    <color name="switchThumbBgActive">#1b5e20</color>
+    <color name="switchThumbActive">#ad1457</color>
+    <color name="switchThumbkNormal">#64b5f6</color>
 </resources>
